[package]
name = "barest"
version = "0.1.0"
authors = ["Faruq Olami"]
edition = "2021"

[dependencies]
compiler_builtins = { version = "0.1.86", features = ["mem"] , default-features = false, optional = true}
volatile = "0.4.0"
spin = "0.9.4"


[dev-dependencies]
bootimage = "0.10.3"

[features]
default = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
